# opengl-camping-scene

./: CMakeLists.txt  README.md
res/compute/: particle_update.glsl
res/frag/: dop_pass.glsl  obj_deferred.glsl  obj_fragment_shader.glsl  obj_lighting.glsl  shader2.glsl  shaderPoints.glsl  ssao_pass.glsl
res/textures/bench/: Lawka 2 - model.mtl
res/textures/firewood/: Bonfire model 1.mtl
res/textures/tree/TreeSet2/: TreeSet.blend
res/vert/: obj_deferred.glsl  obj_lighting.glsl  obj_vertex_shader.glsl  quand_render.glsl  shader1.glsl  shader2.glsl  shaderPoints.glsl  ssao_pass.glsl  vert_skybox.glsl
src/: CMakeLists.txt  entryPoint.cc  main.cc  main.hh
src/manager/: firePlace.cc  firePlace.hh  fireWorkEmitter.hh  fireworkEmitter.cc  gpuParticleEmitter.cc  gpuParticleEmitter.hh  lightManager.cc  particleEmitter.cc  particleEmitter.hh
src/model/: mesh.cc  mesh.hh  model.cc  model.hh  models.cc  models.hh  objLoader.cc  objLoader.hh
src/player/: camera.cc  camera.hh
src/temp/: camera.cc  camera.hh  firePlace.cc  firePlace.hh  fireWorkEmitter.hh  fireworkEmitter.cc  init_gl.cc  init_gl.hh  lightManager.cc  lightManager.hh  main.cc  mesh.cc  mesh.hh  model.cc  model.hh  models.cc  models.hh  objLoader.cc  objLoader.hh  particleEmitter.cc  particleEmitter.hh  program.cc  program.hh  quad.cc  quad.hh  stb_image_implementation.cc  vao.cc  vao.hh
src/texture/: dopBuffer.cc  dopBuffer.hh  gBuffer.cc  gBuffer.hh  skybox.cc  skybox.hh  ssaoBuf.cc  ssaoBuf.hh  ssaoBuffer.cc  ssaoBuffer.hh
src/wrappers/: glWrapper.cc  glWrapper.hh  glmWrapper.hh  wrapper.cc  wrapper.hh
test/: CMakeLists.txt
